# SAIL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml  codeql.yml
cmake/: build-docs.cmake  sail-config.cmake.in  version.cpp.in
example/: CMakeLists.txt  main.cpp
include/sail/: version.hpp
src/: CMakeLists.txt  version.cpp
test/: CMakeLists.txt  test_version.cpp
